# rusty-mobile

./: main.py  pyproject.toml
iron_bird_call/: README.md  pubspec.yaml
iron_bird_call/android/: build.gradle  settings.gradle
iron_bird_call/example/: README.md  pubspec.yaml
iron_bird_call/ios/: iron_bird_call.podspec
iron_bird_call/lib/: iron_bird_call.dart
iron_bird_call/linux/: CMakeLists.txt
iron_bird_call/macos/: iron_bird_call.podspec
iron_bird_call/rust/: Cargo.toml
iron_bird_call/rust/src/: frb_generated.rs
iron_bird_call/rust/src/api/: city.rs  mod.rs  simple.rs  terrain.rs
iron_bird_call/rust/src/api/audio/: audio_util.rs  mel_spectrogram.rs  mod.rs  rust_audio_recorder.rs
iron_bird_call/windows/: CMakeLists.txt
jni_bridge/: Cargo.toml  build_jni_libs.py
jni_bridge/src/: city.rs  jni_utils.rs  lib.rs
presentation/: .gitignore  README.md  analysis_options.yaml  flutter_launcher_icons.yaml  pubspec.yaml
presentation/.claude/: settings.local.json
presentation/lib/: code_theme.dart  main.dart  markdown_theme.dart  scale_notifier.dart  scale_notifier.g.dart  theme.dart
presentation/linux/: CMakeLists.txt
presentation/test/: widget_test.dart
presentation/web/: index.html
rusty_bird/: README.md  pubspec.yaml
rusty_bird/integration_test/: simple_test.dart
rusty_bird/web/: index.html
rusty_droid/: settings.gradle.kts
rusty_droid/app/: build.gradle.kts
rusty_droid/gradle/: libs.versions.toml
rustybird/: flutter_launcher_icons.yaml  pubspec.yaml
uniffi_bridge/: .gitignore  Cargo.toml  README.md  build_uniffi_lib.py
(+164 files in other folders)
