[package]
name = "iron_bird_call"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
noise = "0.9.0"
rayon = "1.11.0"

non-empty-slice = "0.5.1"
cpal = "0.17.3"
spectrograms = "1.0.1"
anyhow = { version = "1.0.75", features = ["backtrace"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
